[package]
name = "hcid"
authors = ["neonphog"]
version = "0.0.7"
edition = "2018"
description = "Holochain base32 encoding scheme for keys, agents, identifiers, etc"
keywords = ["base32", "encoding", "decoding", "erasure", "reed-solomon"]
categories = ["encoding"]
license = "Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/hcid"
repository = "https://github.com/holochain/hcid"

[dependencies]
reed-solomon = "=0.2.1"
getopts = "0.2"
hex = "0.3.2"

[dev-dependencies]
serde_json = "1.0"
